// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer adds integration popover status to state 1`] = `
Object {
  "alertFlyoutVisible": false,
  "basePath": "",
  "esKuery": "",
  "integrationsPopoverOpen": Object {
    "id": "popover-2",
    "open": true,
  },
  "searchText": "",
}
`;

exports[`ui reducer sets the application's base path 1`] = `
Object {
  "alertFlyoutVisible": false,
  "basePath": "yyz",
  "esKuery": "",
  "integrationsPopoverOpen": null,
  "searchText": "",
}
`;
